--- a/src/app/pages/cabinet/timetable/cabinet-timetable.page.html
+++ b/src/app/pages/cabinet/timetable/cabinet-timetable.page.html
@@ -10,7 +10,7 @@
       </div>
 
       <ng-container *ngIf="!loadingInProgress">
-        <h3 *ngIf="!!cabinet.id">
+        <h3 class="app-header" *ngIf="!!cabinet.id">
           Кабинет '{{cabinet.name}}'
         </h3>
 
