--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -2,13 +2,13 @@
   <div class="login-form">
     <form>
       <div class="form-group">
-        <label for="login">Логин:</label>
-        <input id="login" name="login" class="form-control" [(ngModel)]="login">
+        <label class="app-label" for="login">Логин:</label>
+        <input id="login" name="login" class="form-control app-text-input" [(ngModel)]="login">
       </div>
 
       <div class="form-group">
-        <label for="password">Пароль:</label>
-        <input id="password" name="password" type="password" class="form-control" [(ngModel)]="password">
+        <label class="app-label" for="password">Пароль:</label>
+        <input id="password" name="password" type="password" class="form-control app-text-input" [(ngModel)]="password">
       </div>
 
       <br>
