--- a/src/app/pages/login/login.page.less
+++ b/src/app/pages/login/login.page.less
@@ -3,7 +3,7 @@
 .login-page {
   .page;
 
-  background: url('../../../assets/images/background.png') no-repeat center;
+  background: @color-fill_basic_base;
 }
 
 .login-form {
@@ -15,6 +15,4 @@
   padding: 20px;
   margin-top: 10%;
   margin-left: 25%;
-
-  background-color: @color-gray-transparent;
 }
