--- a/src/app/parts/field-validation-sign/field-validation-sign.component.less
+++ b/src/app/parts/field-validation-sign/field-validation-sign.component.less
@@ -1,7 +1,9 @@
+@import "../../../styles.less";
+
 .field-invalid {
-  color: #aa0000;
+  color: @color-fill_text_basic_negative;
 }
 
 .field-valid {
-  color: #00aa00;
+  color: @color-fill_text_basic_positive;
 }
