--- a/src/app/parts/header/header.component.less
+++ b/src/app/parts/header/header.component.less
@@ -6,23 +6,23 @@
   height: 50px;
   padding: 0 20px;
   line-height: 50px;
-  background: @color-primary-normal-1;
+  background: @color-fill_contrast_base;
 }
 
 .header-title {
-  color: @color-white;
+  color: @color-fill_text_inverse;
   width: 15%;
   font-family: hogwartsBold;
 }
 
 .header-login-icon {
-  color: @color-white;
+  color: @color-fill_text_inverse;
   line-height: 50px;
   margin-right: 10px;
 }
 
 .header-login {
-  color: @color-white;
+  color: @color-fill_text_inverse;
   margin-right: 20px;
 }
 
@@ -33,7 +33,7 @@
 .menu-element {
   padding: 0 20px;
   line-height: 50px;
-  color: @color-white;
+  color: @color-fill_text_inverse;
 }
 
 .menu-element-inactive {
