--- a/src/app/parts/student/student-status/student-status.component.less
+++ b/src/app/parts/student/student-status/student-status.component.less
@@ -31,7 +31,7 @@
 .student-status-label-studying {
   .student-status-label;
 
-  background-color: #00aa00;
+  background-color: @color-status_success_strong;
   color: #ffffff;
 }
 
