--- a/src/app/parts/timetable/timetable.component.less
+++ b/src/app/parts/timetable/timetable.component.less
@@ -4,8 +4,9 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  background: @color-gray-2;
-  border: 1px solid @color-gray-4;
+  background: @color-fill_basic_light;
+  border: 1px solid @color-stroke_basic_light;
+  color: @color-fill_text_basic;
 }
 
 .timetable-header-item {
@@ -15,9 +16,9 @@
 }
 
 .timetable-body {
-  border-left: 1px solid @color-gray-4;
-  border-right: 1px solid @color-gray-4;
-  border-bottom: 1px solid @color-gray-4;
+  border-left: 1px solid @color-stroke_basic_light;
+  border-right: 1px solid @color-stroke_basic_light;
+  border-bottom: 1px solid @color-stroke_basic_light;
 }
 
 .timetable-body-row {
@@ -29,16 +30,17 @@
   text-align: center;
   width: 14.28%;
   padding: 5px 0;
+  color: @color-fill_text_basic;
 }
 
 .timetable-current-day {
-  border-left: 1px solid @color-primary-normal-1;
-  border-right: 1px solid @color-primary-normal-1;
+  border-left: 1px solid @color-stroke_basic_light;
+  border-right: 1px solid @color-stroke_basic_light;
 }
 
 .timetable-current-time {
-  border-top: 1px solid @color-primary-normal-1;
-  border-bottom: 1px solid @color-primary-normal-1;
+  border-top: 1px solid @color-stroke_basic_light;
+  border-bottom: 1px solid @color-stroke_basic_light;
 }
 
 .timetable-current-time-clickable:hover {
