--- a/src/styles.less
+++ b/src/styles.less
@@ -7,6 +7,7 @@
 @import "styles/tag-input.less";
 @import "styles/controls.less";
 @import 'styles/student-status.less';
+@import 'styles/scroll.less';
 
 .no-padding {
   padding: 0 !important;
