--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -1,3 +1,125 @@
+/* Fill colors */
+
+@color-fill_contrast_strong: #2b3848;
+@color-fill_contrast_medium: #222e3d;
+@color-fill_contrast_base: #1a2633;
+@color-fill_contrast_light: #121c29;
+@color-fill_contrast_subtle: #09121f;
+
+@color-fill_basic_strong: #3E536B;
+@color-fill_basic_medium: #374B63;
+@color-fill_basic_base: #2E4057;
+@color-fill_basic_light: #27394F;
+@color-fill_basic_subtle: #202F42;
+
+@color-fill_accent_strong: #1966e5;
+@color-fill_accent_medium: #1d5dc7;
+@color-fill_accent_base: #2155a8;
+@color-fill_accent_light: #234b88;
+@color-fill_accent_subtle: #1f4172;
+
+/* Line colors */
+
+@color-line_contrast_strong: #3D4A5A;
+@color-line_contrast_medium: #34404F;
+@color-line_contrast_base: #2C3845;
+@color-line_contrast_light: #242E3B;
+@color-line_contrast_subtle: #1B2431;
+
+@color-line_basic_strong: #4B6078;
+@color-line_basic_medium: #485B73;
+@color-line_basic_base: #43556A;
+@color-line_basic_light: #34465C;
+@color-line_basic_subtle: #2D3E52;
+
+/* Stroke colors */
+
+@color-stroke_contrast_strong: #455262;
+@color-stroke_contrast_medium: #3C4857;
+@color-stroke_contrast_base: #34404D;
+@color-stroke_contrast_light: #2C3643;
+@color-stroke_contrast_subtle: #232C39;
+
+@color-stroke_basic_strong: #586D85;
+@color-stroke_basic_medium: #556880;
+@color-stroke_basic_base: #506277;
+@color-stroke_basic_light: #415369;
+@color-stroke_basic_subtle: #3A4B39;
+
+@color-stroke_accent_strong: #26A3FF;
+@color-stroke_accent_medium: #2B8EEF;
+@color-stroke_accent_base: #2F7EE8;
+@color-stroke_accent_light: #3672CF;
+@color-stroke_accent_subtle: #2F63AD;
+
+/* Alt colors */
+
+@color-alt_contrast_strong: #ebf0f5;
+@color-alt_contrast_medium: #c5d7e699;
+@color-alt_contrast_base: #c5d7e633;
+@color-alt_contrast_light: #c5d7e61a;
+@color-alt_contrast_subtle: #c5d7e60d;
+
+@color-alt_basic_strong: #020508;
+@color-alt_basic_medium: #020508B2;
+@color-alt_basic_base: #02050866;
+@color-alt_basic_light: #02050833;
+@color-alt_basic_subtle: #0205081A;
+
+@color-alt_accent_strong: #2183ff99;
+@color-alt_accent_medium: #2183ff80;
+@color-alt_accent_base: #2183ff66;
+@color-alt_accent_light: #2183ff4c;
+@color-alt_accent_subtle: #2183ff33;
+
+/* Status */
+
+@color-status_success_strong: #017903;
+@color-status_success_medium: #016603;
+@color-status_success_base: #015402;
+@color-status_success_light: #014502;
+@color-status_success_subtle: #013D02;
+
+@color-status_warning_strong: #AC5711;
+@color-status_warning_medium: #994D15;
+@color-status_warning_base: #904918;
+@color-status_warning_light: #87441A;
+@color-status_warning_subtle: #743A1E;
+
+@color-status_error_strong: #be0e0e;
+@color-status_error_medium: #a10b0b;
+@color-status_error_base: #840808;
+@color-status_error_light: #760707;
+@color-status_error_subtle: #670606;
+
+@color-status_info_strong: #1296ac;
+@color-status_info_medium: #138397;
+@color-status_info_base: #147285;
+@color-status_info_light: #156374;
+@color-status_info_subtle: #165666;
+
+/* Text */
+
+@color-fill_text_basic: #ffffff;
+@color-fill_text_basic_light: #ffffff99;
+@color-fill_text_basic_subtle: #ffffff66;
+
+@color-fill_text_inverse: #ffffff;
+@color-fill_text_inverse_light: #ffffff99;
+@color-fill_text_inverse_subtle: #ffffff66;
+
+@color-fill_text_basic_negative: #ff6666;
+@color-fill_text_basic_warning: #ffaa00;
+@color-fill_text_basic_positive: #23c423;
+@color-fill_text_basic_action_link: #45cbfd;
+@color-fill_text_basic_accent: #9bcefd;
+
+@color-fill_text_inverse_negative: #ff6666;
+@color-fill_text_inverse_warning: #ffaa00;
+@color-fill_text_inverse_positive: #23c423;
+@color-fill_text_inverse_action_link: #45cbfd;
+@color-fill_text_inverse_accent: #9bcefd;
+
 @color-primary-light-1: rgba(71, 86, 244, 1.0);
 @color-primary-light-2: rgba(71, 86, 244, 0.7);
 @color-primary-light-3: rgba(71, 86, 244, 0.4);
