--- a/src/styles/student-status.less
+++ b/src/styles/student-status.less
@@ -1,3 +1,5 @@
+@import "colors.less";
+
 .student-status-label {
   padding: 5px 10px;
   border-radius: 5px;
@@ -38,7 +40,7 @@
 .student-status-label-studying {
   .student-status-label;
 
-  background-color: #00aa00;
+  background-color: @color-status_success_strong;
   color: #ffffff;
 }
 
