--- a/src/app/parts/timetable/timetable.component.html
+++ b/src/app/parts/timetable/timetable.component.html
@@ -45,7 +45,7 @@
          [class.timetable-current-day]="dayOfWeek === getCurrentDay()"
          [class.timetable-current-time]="time === getCurrentTime()"
          [class.timetable-current-time-clickable]="!!getGroup(dayOfWeek, time)"
-         [style.background-color]="!!getGroup(dayOfWeek, time) ? getGroup(dayOfWeek, time).color : '#FFFFFF'"
+         [style.background-color]="!!getGroup(dayOfWeek, time) ? getGroup(dayOfWeek, time).color : '#202F42'"
          class="timetable-body-row-item"
          (click)="onTimeSlotClick(dayOfWeek, time)">
       {{getTimeTranslation(time)}}
